fixed side menu visibility bug

--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -1,11 +1,8 @@
 /* Basic Settings */
 
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
-	outline: none;
+	box-sizing: inherit;
+	outline: inherit;
   margin: 0;
   padding: 0;
 }
@@ -16,6 +13,8 @@ html {
 	width: 100%;
 	height: 100%;
   font-size: 62.5%;
+  box-sizing: border-box;
+  outline: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -39,6 +38,13 @@ body {
       bottom: 0;
       left: 0;
   	}
+  }
+  &.menu-open {
+
+    .site-menu {
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+    }
   }
 }
 
@@ -161,13 +167,6 @@ pre {
 }
 .left {
   float: left;
-}
-
-body.menu-open {
-
-	.site-menu {
-		transform: translate3d(0, 0, 0);
-	}
 }
 
 /**
